--- a/server/package.json
+++ b/server/package.json
@@ -7,10 +7,6 @@
   "dependencies": {
     "axios": "^0.21.1",
     "cheerio": "^1.0.0-rc.5",
-    "mongodb": "^3.6.4",
-    "parse-domain": "^3.0.3",
-    "require-all": "^3.0.0",
-    "yarn": "^1.22.10",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
@@ -18,7 +14,8 @@
     "mongodb": "^3.6.4",
     "parse-domain": "^3.0.3",
     "require-all": "^3.0.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.10"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
